Use Magic Gradients v1.3 (#1)
* Add MagicGradients v1.3 with masks samples

* Update samples

* Add samples

--- a/MagicGradientsApp/MagicGradientsApp.csproj
+++ b/MagicGradientsApp/MagicGradientsApp.csproj
@@ -11,17 +11,26 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MagicGradients" Version="1.2.0" />
+    <PackageReference Include="MagicGradients" Version="1.3.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Controls\SnippetFrame.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Pages\BrushesPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Pages\GradientsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Pages\MasksPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Styles\Theme.xaml">
+      <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
   </ItemGroup>
 </Project>
